--- a/app/scss/components/_modal.scss
+++ b/app/scss/components/_modal.scss
@@ -8,7 +8,7 @@ $colours: (
 );
 
 
-@keyframes meow {
+@keyframes animateIn {
 	0% {
 		opacity: 0;
 		transform: translate(0, -100vh);
@@ -56,7 +56,7 @@ $colours: (
 	border-radius: 5px;
 
 	transition: all ease-out 600ms;
-	animation-name: meow;
+	animation-name: animateIn;
 	animation-duration: 600ms;
 	animation-iteration-count: 1;
 
@@ -103,7 +103,6 @@ $colours: (
 			margin-left:  #{(15% / 3)};
 			height:45px;
 			float: left;
-			background: red;
 			border-radius: 3px;
 			text-align: center;
 			@include user-select(none);
@@ -260,7 +259,7 @@ $colours: (
 			font-size:14px;
 
 			@include user-select(none);
-			@include clearfix()
+			@include clearfix();
 
 			i {
 				padding-right:5px;
@@ -296,7 +295,6 @@ $colours: (
 				&-ico {
 					width: 70px;
 					height: 70px;
-					background: blue;
 					float: left;
 					background-size:cover;
 					background-position: center;
